# LLMSAPP

./: .gitignore  2024_AIGC.md  2025年AI新范式中最具突破性的技术.md  README.md  test.c  tools.md  大模型哪些东西.md  矩阵计算公式.md
01_mnist/: test.ipynb  test.py
02.文本与分词/: 1、文本向量化.md  2、构建文本字典原理.md  3、Tokenizer类封装.md  4、基于统计的分词技术.md  Tokenizer.py  embedding.ipynb  基于setentcepiece库的嵌入向量.py  基于setentcepiece库训练模型.py  基于titoken库训练模型.py  文本标准化与格式统一.py  红楼梦.ipynb  红楼梦.py
03.嵌入层/: embedding.ipynb  嵌入层.ipynb
05.注意力机制/: README.md
06.Transformer架构神秘/: Dataset与Dataloader的关系.md  MySelfAttention.py  MyTransformer.py  README.md  Transformer.py  config.py  data.py  main.py  maskselfattention.py  multiheadattention.py  reasoning.ipynb  selfattention.py  交叉熵损失函数.md  优化器的设置.md  优化输出.md  保存模型和加载模型.md  每次训练批次做事情.md  评估大语言模型.md
07.模型微调/: GPTModel.py  LoRA模型微调.md  README.md  instruct.ipynb  instruction-data-with-response.json  lora_demo.ipynb  test_llama.cpp.ipynb  test_llama.cpp.py  模型评分.md
08.知识蒸馏/: README.md  distill.ipynb  get_data_from_gemini.ipynb  get_data_from_llama.cpp.ipynb  get_data_from_llama.cpp.py
6.Transformer架构神秘/: README.md  poisition_embedding.ipynb
LLM/: README.md  data_clear.py  llms.md  scraper.py  提示词的分类.md
Transformer_cpp/: CMakeLists.txt  FeedForwardNetwork.cpp  FeedForwardNetwork.h  GPTModel.cpp  GPTModel.h  Generator.cpp  Generator.h  Logger.cpp  Logger.h  ModelAnalyzer.cpp  ModelAnalyzer.h  ModelConfig.h  MultiHeadAttention.cpp  MultiHeadAttention.h  NewGELU.cpp  NewGELU.h  RE2_CMAKE_OPTIONS.md  RE2_INTEGRATION_GUIDE.md  README.md  REGEX_LIBRARY_SELECTION.md  TIKTOKEN_COMPLETENESS_REPORT.md  TIKTOKEN_MISSING_FEATURES.md  TIKTOKEN_OPENAI_DIFFERENCES.md  TextDataset.cpp  TextDataset.h  Tiktoken.cpp  Tiktoken.h  TiktokenGPT2.cpp  TiktokenGPT2.h  Trainer.cpp  Trainer.h  TrainingUtils.cpp  TrainingUtils.h  TransformerBlock.cpp  TransformerBlock.h  example.cpp  inference.cpp  model_info.cpp  tiktoken_cpp_README.md  tiktoken_example.cpp  (+1 more)
deeplean_tran/: 2、深度神经网络之L2正则化.md  3、深度神经网络之Dropout.md  4、深度神经网络之数据归一化处理.md  5、深度神经网络之初始化权重参数.md  6、深度神经网络之全批量梯度下降、随机梯度下降和小批量梯度下降.md  7、深度神经网络之梯度参数调优.md  8、深度神经网络之参数优化(BatchNormaliztion).md  README.md  mermaid_flow.mmd  mermaid_structure.mmd  向量化与矩阵化.md  深度学习训练参数.md
deeplearn/: 3.梯度下降.md  4.学习率.md  5.逻辑回归.md  6.逻辑回归之激活函数(Sigmoid).md  7.深度神经网络与前向传播.md  8.深度学习中激活函数.md  9.深度学习神经网络的反向传播与计算图  README.md  activation_examples.py  sigmoid_plot.py
python_base/: deeplib.py  forwhileclass.py
文本与分词/: 2、构造文本字典.md  5、文本向量化(Embedding).md  Tokenizer.py  test_tiktoken.ipynb  test_tokenizer.ipynb  tokenizer.ipynb
